objects/ASI_TH_CRM_Offtake_Stock_In_Trade_Detail__c.object
<CustomObject>
    <description>ASI_TH_CRM_Stock_In_Trade_Detail</description>
    <fields>
        <fullName>ASI_CRM_Account_Code__c</fullName>
        <formula>ASI_TH_CRM_Account__r.ASI_KOR_Customer_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Account_Group_ID__c</fullName>
        <formula>ASI_TH_CRM_Account__r.ASI_CRM_Account_Group__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Group ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Account_Name__c</fullName>
        <formula>ASI_TH_CRM_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Adjusted_Quantity__c</fullName>
        <label>Adjusted Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Adjusted_Reason__c</fullName>
        <label>Adjusted Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Beginning_Stock_9L__c</fullName>
        <formula>ASI_TH_CRM_Beginning_Stock__c  *  ASI_TH_CRM_Sub_brand__r.ASI_HK_CRM_Bottle_Size__c  / 9000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Beginning Stock (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Branch__c</fullName>
        <label>Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Contract_No__c</fullName>
        <formula>ASI_CRM_Contract__r.Name</formula>
        <label>Contract No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>ASI_TH_CRM_Contract__c</referenceTo>
        <relationshipLabel>Offtake/Stock-in-Trade Details</relationshipLabel>
        <relationshipName>Offtake_Stock_in_Trade_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Offtake/Stock-in-Trade Details</relationshipLabel>
        <relationshipName>Offtake_Stock_in_Trade_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Depletion_Gap_Percent__c</fullName>
        <formula>if (( ASI_TH_CRM_Sell_In__c + ASI_TH_CRM_FOC__c )=0,
  0,
  ASI_CRM_Depletion_Gap_Quantity__c / ( ASI_TH_CRM_Sell_In__c + ASI_TH_CRM_FOC__c )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Depletion Gap %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Depletion_Gap_Quantity__c</fullName>
        <formula>ASI_TH_CRM_Sell_In__c + ASI_TH_CRM_FOC__c - ASI_TH_CRM_Total_Offtake_Final__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Depletion Gap Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Ending_Stock_9L__c</fullName>
        <formula>ASI_TH_CRM_Ending_Stock_Final__c *  ASI_TH_CRM_Sub_brand__r.ASI_HK_CRM_Bottle_Size__c / 9000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ending Stock (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_FOC_9L__c</fullName>
        <formula>ASI_TH_CRM_FOC__c * ASI_TH_CRM_Sub_brand__r.ASI_HK_CRM_Bottle_Size__c / 9000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FOC (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Incentive_Points_Per_Bottle__c</fullName>
        <label>Incentive Points Per Bottle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Incentive_Points__c</fullName>
        <label>Incentive Points</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Item_Group__c</fullName>
        <formula>ASI_CRM_SKU__r.ASI_MFM_Item_Group__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Local_Channel__c</fullName>
        <formula>Text(ASI_TH_CRM_Account__r.ASI_HK_CRM_Local_Channel__c)</formula>
        <label>Local Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Off_premise_Offtake_9L__c</fullName>
        <formula>ASI_TH_CRM_Off_premise_Offtake__c * ASI_TH_CRM_Sub_brand__r.ASI_HK_CRM_Bottle_Size__c / 9000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Off-premise Offtake (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_On_premise_Offtake_9L__c</fullName>
        <formula>ASI_TH_CRM_On_premise_Offtake__c * ASI_TH_CRM_Sub_brand__r.ASI_HK_CRM_Bottle_Size__c / 9000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>On-premise Offtake (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Others_9L__c</fullName>
        <formula>ASI_TH_CRM_Others__c * ASI_TH_CRM_Sub_brand__r.ASI_HK_CRM_Bottle_Size__c / 9000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Others (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet_Image__c</fullName>
        <formula>ASI_CRM_Customer__r.ASI_TH_CRM_OutletImage__r.Name</formula>
        <label>Outlet Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet_Type__c</fullName>
        <formula>ASI_CRM_Customer__r.ASI_TH_CRM_OutletType__r.Name</formula>
        <label>Outlet Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Packaging_Size__c</fullName>
        <formula>ASI_CRM_SKU__r.ASI_HK_CRM_Packaging_Size__c</formula>
        <label>Packaging Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Packing_Description__c</fullName>
        <formula>ASI_CRM_SKU__r.ASI_FOC_Packing_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Packing Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Product_Group_1__c</fullName>
        <formula>ASI_TH_CRM_Sub_brand__r.ASI_TH_CRM_Product_Group_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Group 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Product_Group_2__c</fullName>
        <formula>ASI_TH_CRM_Sub_brand__r.ASI_TH_CRM_Product_Group_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Group 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Product_Group_3__c</fullName>
        <formula>ASI_TH_CRM_Sub_brand__r.ASI_CRM_Product_Group_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Group 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Product_Group_BMC__c</fullName>
        <formula>ASI_TH_CRM_Sub_brand__r.ASI_CRM_Product_Group_BMC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Group BMC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Quantity_9L__c</fullName>
        <formula>IF(BLANKVALUE(ASI_CRM_Quantity_Bottle__c, 0) * ASI_CRM_Std_Bottle_Size__c = 0, 1, BLANKVALUE(ASI_CRM_Quantity_Bottle__c, 0) * ASI_CRM_Std_Bottle_Size__c ) / 900</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Quantity_Bottle__c</fullName>
        <label>Quantity (Bottle)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Quantity_CA__c</fullName>
        <formula>BLANKVALUE(ASI_CRM_Quantity_Bottle__c, 0) / BLANKVALUE(ASI_CRM_Packaging_Size__c, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity (CA)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_RSM__c</fullName>
        <formula>ASI_TH_CRM_Account__r.Owner.Manager.FirstName + &apos; &apos; + ASI_TH_CRM_Account__r.Owner.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RSM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SKU_Code__c</fullName>
        <formula>ASI_CRM_SKU__r.ASI_MFM_SKU_Code__c</formula>
        <label>SKU Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SKU_Description__c</fullName>
        <formula>ASI_CRM_SKU__r.ASI_MFM_SKU_Description__c</formula>
        <label>SKU Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKU</label>
        <referenceTo>ASI_MFM_SKU_Code__c</referenceTo>
        <relationshipLabel>Offtake/Stock-in-Trade Details</relationshipLabel>
        <relationshipName>Offtake_Stock_in_Trade_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sales_Potential__c</fullName>
        <formula>TEXT(ASI_CRM_Customer__r.ASI_CRM_Sales_Potential__c)</formula>
        <label>Sales Potential</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sell_in_9L__c</fullName>
        <formula>ASI_TH_CRM_Sell_In__c * ASI_TH_CRM_Sub_brand__r.ASI_HK_CRM_Bottle_Size__c / 9000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sell-in (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Std_Bottle_Size__c</fullName>
        <formula>ASI_CRM_SKU__r.ASI_HK_CRM_Std_Bottle_Size__c</formula>
        <label>Std. Bottle Size (Cl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Offtake_9L__c</fullName>
        <formula>ASI_TH_CRM_Total_Offtake_Final__c * ASI_TH_CRM_Sub_brand__r.ASI_HK_CRM_Bottle_Size__c / 9000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Offtake (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Account_2nd_Upload__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used for Temp Record Type when 2nd MT offtake upload</description>
        <label>Account (2nd Upload)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Offtake/Stock-in-Trade Details (Account (2nd Upload))</relationshipLabel>
        <relationshipName>Offtake_Stock_in_Trade_Details1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Offtake/Stock-in-Trade Details</relationshipLabel>
        <relationshipName>Offtake_Stock_in_Trade_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Beginning_Stock__c</fullName>
        <label>Beginning Stock</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Bypass_Calculation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Calculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Ending_Stock_Draft__c</fullName>
        <label>Ending Stock (Draft)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Ending_Stock_Final__c</fullName>
        <label>Ending Stock</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_FOC__c</fullName>
        <label>FOC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Month__c</fullName>
        <formula>CASE(MONTH( ASI_TH_CRM_Date__c ),
1, &quot;Jan&quot;,
2, &quot;Feb&quot;,
3, &quot;Mar&quot;, 
4, &quot;Apr&quot;, 
5, &quot;May&quot;, 
6, &quot;Jun&quot;,
7, &quot;Jul&quot;,
8, &quot;Aug&quot;,
9, &quot;Sep&quot;,
10, &quot;Oct&quot;,
11, &quot;Nov&quot;,
12, &quot;Dec&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Off_premise_Offtake__c</fullName>
        <label>Off-premise Offtake</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_OfftakeSITDetail_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Offtake/SIT Detail External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_On_premise_Offtake__c</fullName>
        <label>On-premise Offtake</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Others__c</fullName>
        <label>Others</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_SIT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offtake/Stock-In-Trade</label>
        <referenceTo>ASI_TH_CRM_Offtake_Stock_In_Trade__c</referenceTo>
        <relationshipLabel>Offtake/Stock-in-Trade Details</relationshipLabel>
        <relationshipName>Offtake_Stock_in_Trade_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Sell_In__c</fullName>
        <label>Sell-In</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Sub_brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Offtake/Stock-in-Trade Details</relationshipLabel>
        <relationshipName>Offtake_Stock_in_Trade_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Total_Offtake_Draft__c</fullName>
        <label>Total Offtake (Draft)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Total_Offtake_Final__c</fullName>
        <label>Total Offtake</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Year__c</fullName>
        <formula>TEXT(YEAR( ASI_TH_CRM_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <label>Offtake/Stock-in-Trade Detail</label>
    <listViews>
        <fullName>ASI_TH_CRM_MT_Offtake_SITD</fullName>
        <columns>NAME</columns>
        <columns>ASI_TH_CRM_Account__c</columns>
        <columns>ASI_TH_CRM_Year__c</columns>
        <columns>ASI_TH_CRM_Month__c</columns>
        <columns>ASI_TH_CRM_Sub_brand__c</columns>
        <columns>ASI_TH_CRM_Beginning_Stock__c</columns>
        <columns>ASI_TH_CRM_Sell_In__c</columns>
        <columns>ASI_TH_CRM_Others__c</columns>
        <columns>ASI_TH_CRM_Total_Offtake_Final__c</columns>
        <columns>ASI_TH_CRM_Ending_Stock_Final__c</columns>
        <columns>ASI_TH_CRM_Delete__c</columns>
        <columns>ASI_TH_CRM_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TH_CRM_Offtake_Stock_In_Trade_Detail__c.ASI_TH_CRM_MT_Stock_In_Trade_Detail</value>
        </filters>
        <label>All MT Offtake/Stock-in-Trade Detail</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TH_CRM_MT_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TH_CRM_MT_Offtake_SITD_TM</fullName>
        <columns>NAME</columns>
        <columns>ASI_TH_CRM_Account__c</columns>
        <columns>ASI_TH_CRM_Year__c</columns>
        <columns>ASI_TH_CRM_Month__c</columns>
        <columns>ASI_TH_CRM_Sub_brand__c</columns>
        <columns>ASI_TH_CRM_Beginning_Stock__c</columns>
        <columns>ASI_TH_CRM_Sell_In__c</columns>
        <columns>ASI_TH_CRM_Others__c</columns>
        <columns>ASI_TH_CRM_Total_Offtake_Final__c</columns>
        <columns>ASI_TH_CRM_Ending_Stock_Final__c</columns>
        <columns>ASI_TH_CRM_Delete__c</columns>
        <columns>ASI_TH_CRM_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TH_CRM_Offtake_Stock_In_Trade_Detail__c.ASI_TH_CRM_MT_Stock_In_Trade_Detail</value>
        </filters>
        <filters>
            <field>ASI_TH_CRM_Year__c</field>
            <operation>equals</operation>
            <value>2015</value>
        </filters>
        <filters>
            <field>ASI_TH_CRM_Month__c</field>
            <operation>equals</operation>
            <value>Dec</value>
        </filters>
        <label>All MT Offtake/Stock-in-Trade Detail_TM</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TH_CRM_MT_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TH_CRM_MT_Offtake_SITD_Tem</fullName>
        <columns>NAME</columns>
        <columns>ASI_TH_CRM_Account__c</columns>
        <columns>ASI_TH_CRM_Account_2nd_Upload__c</columns>
        <columns>ASI_TH_CRM_Year__c</columns>
        <columns>ASI_TH_CRM_Month__c</columns>
        <columns>ASI_TH_CRM_Sub_brand__c</columns>
        <columns>ASI_TH_CRM_Beginning_Stock__c</columns>
        <columns>ASI_TH_CRM_Sell_In__c</columns>
        <columns>ASI_TH_CRM_Others__c</columns>
        <columns>ASI_TH_CRM_Total_Offtake_Final__c</columns>
        <columns>ASI_TH_CRM_Ending_Stock_Final__c</columns>
        <columns>ASI_TH_CRM_Delete__c</columns>
        <columns>ASI_TH_CRM_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TH_CRM_Offtake_Stock_In_Trade_Detail__c.ASI_TH_CRM_MT_SITD_Temp</value>
        </filters>
        <label>All MT Offtake/Stock-in-Trade Detail_Tem</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TH_CRM_MT_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TH_CRM_WS_Offtake_SITD</fullName>
        <columns>NAME</columns>
        <columns>ASI_TH_CRM_Account__c</columns>
        <columns>ASI_TH_CRM_Year__c</columns>
        <columns>ASI_TH_CRM_Month__c</columns>
        <columns>ASI_TH_CRM_Sub_brand__c</columns>
        <columns>ASI_TH_CRM_Beginning_Stock__c</columns>
        <columns>ASI_TH_CRM_Sell_In__c</columns>
        <columns>ASI_TH_CRM_Others__c</columns>
        <columns>ASI_TH_CRM_Total_Offtake_Final__c</columns>
        <columns>ASI_TH_CRM_Ending_Stock_Final__c</columns>
        <columns>ASI_TH_CRM_Delete__c</columns>
        <columns>ASI_TH_CRM_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TH_CRM_Offtake_Stock_In_Trade_Detail__c.ASI_TH_CRM_WS_Stock_In_Trade_Detail</value>
        </filters>
        <label>All WS Offtake/Stock-in-Trade Detail</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TH_CRM_WS_User</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_SG_Offtake_Stock_in_Trade_Detail</fullName>
        <columns>NAME</columns>
        <columns>ASI_TH_CRM_Account__c</columns>
        <columns>ASI_TH_CRM_Year__c</columns>
        <columns>ASI_TH_CRM_Month__c</columns>
        <columns>ASI_TH_CRM_Sub_brand__c</columns>
        <columns>ASI_TH_CRM_Beginning_Stock__c</columns>
        <columns>ASI_TH_CRM_Sell_In__c</columns>
        <columns>ASI_TH_CRM_Others__c</columns>
        <columns>ASI_TH_CRM_Total_Offtake_Final__c</columns>
        <columns>ASI_TH_CRM_Ending_Stock_Final__c</columns>
        <columns>ASI_TH_CRM_Delete__c</columns>
        <columns>ASI_TH_CRM_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TH_CRM_Offtake_Stock_In_Trade_Detail__c.ASI_CRM_SG_WS_Stock_In_Trade_Detail,ASI_TH_CRM_Offtake_Stock_In_Trade_Detail__c.ASI_CRM_SG_WS_Depletion</value>
        </filters>
        <label>All SG Offtake/Stock-in-Trade Detail</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TH_CRM_WS_User</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>SIT-{00000}-TH</displayFormat>
        <label>SITD No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offtake/Stock-in-Trade Details</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_MO_WSOfftakeDetail</fullName>
        <active>true</active>
        <label>ASI CRM MO WS Offtake Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_MY_WS_Stock_In_Trade_Detail</fullName>
        <active>true</active>
        <label>ASI_CRM_MY_WS_Stock_In_Trade_Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_WS_Depletion</fullName>
        <active>true</active>
        <label>ASI_CRM_SG_WS_Depletion</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_WS_Stock_In_Trade_Detail</fullName>
        <active>true</active>
        <label>ASI_CRM_SG_WS_Stock-In-Trade Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TH_CRM_MT_SITD_Temp</fullName>
        <active>true</active>
        <label>ASI_TH_CRM_MT_SITD_Temp</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TH_CRM_MT_Stock_In_Trade_Detail</fullName>
        <active>true</active>
        <label>ASI_TH_CRM_MT_Stock-In-Trade Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TH_CRM_WS_Stock_In_Trade_Detail</fullName>
        <active>true</active>
        <label>ASI_TH_CRM_WS_Stock-In-Trade Detail</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ASI_TH_CRM_LockEntry</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL(ASI_TH_CRM_SIT__r.ASI_TH_CRM_Status__c,&apos;Locked&apos;)</errorConditionFormula>
        <errorDisplayField>ASI_TH_CRM_Account__c</errorDisplayField>
        <errorMessage>The Offtake/Stock-in-Trade record has been locked.</errorMessage>
    </validationRules>
</CustomObject>